--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -9,7 +9,6 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "tw-animate-css": "^1.4.0",
     "@creit.tech/stellar-wallets-kit": "^1.0.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
@@ -19,10 +18,11 @@
     "@neko/oracle": "0.0.0",
     "@neko/rwa-lending": "0.0.0",
     "@neko/rwa-oracle": "0.0.0",
+    "@rainbow-me/rainbowkit": "^2.2.10",
+    "@soroswap/sdk": "^0.3.8",
     "@stellar/design-system": "^3.2.7",
     "@stellar/stellar-sdk": "^14.2.0",
     "@stellar/stellar-xdr-json": "^23.0.0",
-    "@soroswap/sdk": "^0.3.8",
     "@tanstack/react-query": "^5.62.11",
     "axios": "^1.7.9",
     "chart.js": "^4.4.0",
@@ -34,6 +34,9 @@
     "react-chartjs-2": "^5.2.0",
     "recharts": "^2.10.0",
     "tailwind-merge": "^2.5.4",
+    "tw-animate-css": "^1.4.0",
+    "viem": "^2.43.3",
+    "wagmi": "^2.19.5",
     "zod": "^3.23.8",
     "zustand": "^5.0.2"
   },
