--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -24,9 +24,13 @@
     "@stellar/stellar-sdk": "^14.2.0",
     "@stellar/stellar-xdr-json": "^23.0.0",
     "@tanstack/react-query": "^5.62.11",
+    "@uniswap/sdk-core": "^7.10.0",
+    "@uniswap/universal-router-sdk": "^4.29.0",
+    "@uniswap/v4-sdk": "^1.25.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.0",
     "clsx": "^2.1.1",
+    "ethers": "^5.8.0",
     "json-schema": "^0.4.0",
     "lodash": "^4.17.21",
     "lossless-json": "^1.0.4",
