--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -14,6 +14,7 @@
     "@creit.tech/stellar-wallets-kit": "^1.0.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^5.2.2",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "@neko/config": "0.0.0",
@@ -38,6 +39,7 @@
     "lossless-json": "^1.0.4",
     "lucide-react": "^0.344.0",
     "react-chartjs-2": "^5.2.0",
+    "react-hook-form": "^7.70.0",
     "recharts": "^2.10.0",
     "tailwind-merge": "^2.5.4",
     "tw-animate-css": "^1.4.0",
