--- a/apps/contracts/evm-contracts/rwa-lending/foundry.toml
+++ b/apps/contracts/evm-contracts/rwa-lending/foundry.toml
@@ -1,11 +1,11 @@
 [profile.default]
-src = "."
+src = "src"
 out = "out"
 libs = ["lib"]
 test = "test"
 script = "script"
-solc = "0.8.24"
-evm_version = "paris"
+solc = "0.8.27"
+evm_version = "cancun"
 optimizer = true
 optimizer_runs = 200
 via_ir = false
@@ -13,6 +13,7 @@ via_ir = false
 # Remappings
 remappings = [
     "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
+    "@pythnetwork/pyth-sdk-solidity/=node_modules/@pythnetwork/pyth-sdk-solidity/",
 ]
 
 # Testing
