--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -18,9 +18,8 @@
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "@neko/config": "0.0.0",
+    "@neko/lending": "0.0.0",
     "@neko/oracle": "0.0.0",
-    "@neko/rwa-lending": "0.0.0",
-    "@neko/rwa-oracle": "0.0.0",
     "@rainbow-me/rainbowkit": "^2.2.10",
     "@soroswap/sdk": "^0.3.8",
     "@stellar/design-system": "^3.2.7",
