--- a/apps/contracts/stellar-contracts/Cargo.toml
+++ b/apps/contracts/stellar-contracts/Cargo.toml
@@ -8,14 +8,14 @@ members = [
 ]
 
 [workspace.package]
-authors = ["OppiaLabs"]
+authors = ["OppiaLabs <contact@oppiasoftwarelabs.com>"]
 edition = "2024"
-license = "Apache-2.0"
+license = "MIT"
 repository = "https://github.com/Neko-Protocol"
 version = "0.0.1"
 
 [workspace.dependencies]
-soroban-sdk = "23.0.2"
+soroban-sdk = "23.0.4"
 
 [profile.release]
 opt-level = "z"
