--- a/apps/contracts/stellar-contracts/rwa-oracle/Cargo.toml
+++ b/apps/contracts/stellar-contracts/rwa-oracle/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rwa-oracle"
 description = "RWA Oracle for Real-World Asset metadata and price feeds"
-version.workspace = true
+version = "0.0.1"
 authors = ["OppiaLabs <contact@oppiasoftwarelabs.com>"]
 license = "MIT"
 edition.workspace = true
