--- a/apps/contracts/stellar-contracts/rwa-perps/Cargo.toml
+++ b/apps/contracts/stellar-contracts/rwa-perps/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rwa-perps"
 description = "RWA Perpetual contract - A Perpetual Future contract for RWA stocks"
-version.workspace = true
+version = "0.0.1"
 authors = ["OppiaLabs <contact@oppiasotfwarelabs.com>"]
 license.workspace = true
 edition.workspace = true
