--- a/apps/contracts/stellar-contracts/rwa-token/Cargo.toml
+++ b/apps/contracts/stellar-contracts/rwa-token/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rwa-token"
 description = "RWA Token contract - A simplified fungible token for Real-World Assets with RWA Oracle price integration"
-version.workspace = true
+version = "0.0.1"
 authors = ["OppiaLabs <contact@oppiasotfwarelabs.com>"]
 license.workspace = true
 edition.workspace = true
